# notes

./: PLAN.md  README.md  index.html  justfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
meeting-notes/: package.json
meeting-notes/src-tauri/capabilities/: default.json
meeting-notes/src-tauri/core/: Cargo.toml
meeting-notes/src-tauri/core/src/: frontmatter.rs  search.rs  slug.rs  types.rs
meeting-notes/src-tauri/src/: commands.rs  config.rs  fsstore.rs  lib.rs
meeting-notes/src/components/: EditorPane.tsx  MetadataBar.test.tsx  Modal.tsx  NoteEditor.tsx
meeting-notes/src/lib/: types.ts
meeting-notes/src/state/: notesStore.test.ts
meeting-notes/src/views/: MainView.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/core/src/: frontmatter.rs  lib.rs  types.rs
src-tauri/src/: access.rs  ai.rs  commands.rs  fsstore.rs  highlight.rs  lib.rs  main.rs  search.rs  state.rs
src/components/: AiSettingsModal.tsx  ConfirmDialog.tsx  EditorContextMenu.tsx  EditorPane.tsx  MetadataBar.test.tsx  MetadataBar.tsx  Modal.tsx  NewMeetingTypeModal.tsx  NewNoteModal.tsx  NoteEditor.tsx  NoteList.tsx  NotePreview.tsx  Sidebar.tsx
src/lib/: aiActions.ts  format.test.ts  format.ts  promptBlock.ts  tauri.ts  types.ts
src/state/: meetingTypesStore.ts  notesStore.test.ts  notesStore.ts
src/views/: MainView.tsx
