[package]
name = "notes-core"
version = "0.1.0"
edition = "2021"
description = "Pure business logic for Meeting Notes (no Tauri/OS dependencies, fully unit-testable)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
